name:                check-elf-size
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Zelin Feng
maintainer:          fengzlin@mail2.sysu.edu.cn
copyright:           Copyright Zelin Feng 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable check-elf-size
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , elf
    , optparse-applicative
    , bytestring